--- a/mose/index.adoc
+++ b/mose/index.adoc
@@ -43,3 +43,23 @@ Was wir hierbei nehmen:
 * Kurier
 * OÖ Nachrichten (etwas aufpassen)
 * Der Spiegel (ist allerdings deutsches Recht)
+
+== Rechtsformen
+
+== Privates und öffentliches Recht
+
+=== privates Recht:
+
+* Bürger gegen Bürger
+* Kaufvertrag
+
+=== öffentliches Recht
+
+z.B.: Standesbeamter bei Hochzeit
+Bürger gegen Staat
+
+=== Zwingendes Recht und nachgiebiges Recht
+
+Zwingendes Recht muss befolgt werden
+
+nachgiebiges Recht kann ausgemacht oder abgesprochen werden.
