--- a/mose/index.adoc
+++ b/mose/index.adoc
@@ -63,3 +63,15 @@ Bürger gegen Staat
 Zwingendes Recht muss befolgt werden
 
 nachgiebiges Recht kann ausgemacht oder abgesprochen werden.
+
+== Rechtsnormen
+
+Österreich ist:
+
+* Rechtsstaat
+* Gewaltenteilend
+
+* Verordnung: Gilt sofort für alle (DSGVO) +
+* Richtlinie: muss zuerst in nationales Recht umgewandelt werden (z.B Anti - Diskriminierung)
+* Verfassungsrecht: hat einen sehr hohen stellen
+*
