Idk what lecture but here you go

--- a/apoll/index.adoc
+++ b/apoll/index.adoc
@@ -130,3 +130,31 @@ Die Leute werden mit einem System versorgt (Bildung, Gesundheit, ...)
 Umwelt, Umweltschutz
 
 Der Staat greift regulierend ein, und schütz dadurch die Menschen und Umwelt, der Markt is außerhalb dieser Eingriffe sonst aber frei.
+
+== Arbeitsteilung
+
+=== NACHSCHREIBEN
+
+=== NACHSCHREIBEN
+
+
+
+horizontale Arbeitsteilung: z.B Tischler, Spezialiersiert sich auf irgendetwas
+
+vertikale Arbeitsteilung: Sektoren
+
+==== Arbeitssektoren
+
+~5 primärer sektor
+
+
+=== internationale Arbeitsteilung
+
+Voraussetzungen
+
+* Rohstoff - Vorkommen
+* Lohnniveauunterschiede (80€ bei uns, 2Cent in Bangladesh)
+* (Know How)
+* Klima
+
+=> es wird dort produziert, wo die Kosten am niedrigsten sind!
