--- a/mose/index.adoc
+++ b/mose/index.adoc
@@ -74,3 +74,8 @@ nachgiebiges Recht kann ausgemacht oder abgesprochen werden.
 * Verordnung: Gilt sofort für alle (DSGVO) +
 * Richtlinie: muss zuerst in nationales Recht umgewandelt werden (z.B Anti - Diskriminierung)
 * Verfassungsrecht: hat einen sehr hohen stellen
+
+== ErwachsenenRegelung oder so
+
+* Vorsorgevollmacht
+* Gewählter Erwachsenenvertreter
