--- a/apoll/index.adoc
+++ b/apoll/index.adoc
@@ -177,3 +177,14 @@ Kombination der Produktionsfaktoren
 * Boden
 * Kapital
 * Know How
+
+== Wirtschaft Arbeitsauftrag:
+
+Produktionsfaktoren:
+
+* Arbeit
+* Boden
+* Kapital
+* Wissen
+
+Die meisten haben die höchste Priorität, heute und auch in Zukunft, denn nichts würde funktionieren ohne Arbeit, Kapital und Wissen. Boden ist teilweise unnötig, wenn man ein digitales Projekt hat oder eine Verkaufsmethode verwendet, wo man das Produkt nicht einmal gesehen hat.
