--- a/mose/index.adoc
+++ b/mose/index.adoc
@@ -79,3 +79,52 @@ nachgiebiges Recht kann ausgemacht oder abgesprochen werden.
 
 * Vorsorgevollmacht
 * Gewählter Erwachsenenvertreter
+
+== Verträge
+
+Verträge werden andauern abgeschlossen
+
+=== Werkvertrag
+
+Ein Erfolg, den man verspricht
+
+=== Kaufvertrag
+
+wird abgeschlossen, immer wenn jemand etwas kauft
+
+
+=== Garantie
+
+Kann beim Produkt dabei sein, kann aber auch als extra geld und / oder als Extrapacket (mit extra kosten) erhalten werden
+
+
+==== Garantiefall
+
+* Primär Beihilfe:
+** Austausch
+**  Reperatur
+
+Dies darf allerdings der Kunde entscheiden
+
+* Sekundärbeihilfe
+** Behalten bei teilweiser Rückerstattung
+** Komplette Rückerstattung (gegen Geld)
+
+IMPORTANT: Bei gebrauchter Wahre: Kann auf 1 Jahr verringert werden
+
+Die Reperatur muss in einem angemessenen Zeitraum passieren, es soll auf in gewissen Fällen ein Ersatzgerät bereitgestellt werden.
+
+=== Gewährleistung
+
+z.B Bein einem Auto, dass 200 km/h schaffen sollte, allerdings nur 180 erreicht.
+
+Ist vom verschulden unabhängig
+
+Wenn ich irgendwas allerdings deutlich sehe, ich diese Ware allerdings trotzdem kaufe, fällt die Gewährleistung aus.
+
+Bei Abnutzung gibt es keine Gewährleistung
+
+=== Beweislast
+
+Im 1. Jahr beim Händler, danach beim Kunden
+
