--- a/apoll/index.adoc
+++ b/apoll/index.adoc
@@ -177,3 +177,39 @@ Kombination der Produktionsfaktoren
 * Boden
 * Kapital
 * Know How
+
+
+* Homogenität (Vergleichbarkeit)
+* Freier Markteintritt
+* Verhalten: Vernünftig!
+** homogen:
+
+keine
+
+* zeitlich
+* persönlich
+* sachlich
+* Räumlich
+
+Präferenzen
+
+* Monopol: 1 Anbieter oder 1 Nachfrager -> Preis sehr hoch
+* Oligopol: wenige Anbieter oder Nachfrager -> Preis hoch
+* Polypol: sehr viele -> Preis niedrig
+
+-> Service (Bio, regionales)
+-> Kundenbindung
+
+== Teststoff
+
+* [...]
+* Produktionsfaktoren
+* Standortsfaktoren
+* Angebot, Nachfrage und Preis
+
+.Beispielfragen
+[%collapsible]
+====
+* Was ist soziale Marktwirktschaft?
+* Arbeitsteilung freie Markwirtschaft?
+====
